--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "econoclasses"
-version = "0.1.0"
+version = "0.2.0"
 description = "An economics analysis module for calculation, analysis and visualisation"
 authors = [{name = "Enrico Costa", email = "enriicoo@gmail.com"},]
 readme = 'README.md'
@@ -13,3 +13,14 @@ numpy = ">=1.26.4"
 scipy = ">=1.14.1"
 matplotlib = ">=3.8.4"
 sympy = ">=4.1.1"
+
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["econoclasses*"]
